--- a/.gitignore
+++ b/.gitignore
@@ -289,3 +289,5 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm
+*/alembic/
+*/alembic.ini
